data/all_generated_tests/raw_wast_tests/unreachable_TypeMismatchinControlFlowInstructions_1578.wast
;; 9. **Test Description:** Place `unreachable` as part of a `br_if` (branch if) instruction within a block, followed by instructions requiring specific stack types.    **Constraint:** The branch condition should correctly handle stack types given the trap is hit.    **Reasoning:** Evaluates the impact of `unreachable` on conditional branching and stack consistency.

(assert_invalid
  (module (func $type-unreachable-in-br_if-block (result i32)
    (block
      (i32.const 0)
      (i32.const 1)
      (br_if 0 (unreachable))
      (i32.add)
    )
  ))
  "type mismatch"
)